src/widgets/graph/snapshots/lazylora__widgets__graph__txn_graph__tests__app_call_with_inner_txns.snap
---
source: src/widgets/graph/txn_graph.rs
expression: terminal.backend()
---
"       TYP     CAL...AA   App #12…   APP...BI   REC...TU              "
"       ────────────┬──────────┬──────────┬──────────┬───              "
"                   │          │          │          │                 "
"         APP       ●──────────▶          │          │    NoOp         "
"        ·PAY       │          │          ●──────────▶    5.00A        "
"        ·AXF       │          │          ●──────────▶    500000       "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
