src/widgets/graph/snapshots/lazylora__widgets__graph__txn_graph__tests__asset_config_create.snap
---
source: src/widgets/graph/txn_graph.rs
expression: terminal.backend()
---
"             TYP   CRE...AA             "
"             ──────────┬───             "
"                       │                "
"               ACF  ◉config             "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
