src/widgets/graph/snapshots/lazylora__widgets__graph__txn_graph__tests__asset_freeze.snap
---
source: src/widgets/graph/txn_graph.rs
expression: terminal.backend()
---
"         TYP   FRE...AA   FRO...TU                "
"         ──────────┬──────────┬───                "
"                   │          │                   "
"           AFZ     ●──────────▶    freeze         "
"                                                  "
"                                                  "
"                                                  "
"                                                  "
"                                                  "
"                                                  "
