src/widgets/graph/snapshots/lazylora__widgets__graph__txn_graph__tests__asset_transfer.snap
---
source: src/widgets/graph/txn_graph.rs
expression: terminal.backend()
---
"        TYP   SEN...4A   REC...TU                 "
"        ──────────┬──────────┬───                 "
"                  │          │                    "
"          AXF     ●──────────▶    1000000         "
"                                                  "
"                                                  "
"                                                  "
"                                                  "
"                                                  "
"                                                  "
