src/widgets/graph/snapshots/lazylora__widgets__graph__txn_graph__tests__keyreg_point.snap
---
source: src/widgets/graph/txn_graph.rs
expression: terminal.backend()
---
"                      ①                 "
"             TYP   VAL...LY             "
"                   Account              "
"             ──────────┬───             "
"                       │                "
"               KEY  ◉keyreg             "
"                                        "
"                                        "
"                                        "
"                                        "
