src/widgets/graph/snapshots/lazylora__widgets__graph__txn_graph__tests__payment_with_rekey.snap
---
source: src/widgets/graph/txn_graph.rs
expression: terminal.backend()
---
"                      ①          ②          ③                         "
"             TYP   SEN...4A   REC...TU   NEW...CA                     "
"                   Account    Account    Account                      "
"             ──────────┬──────────┬──────────┬───                     "
"                       │          │          │                        "
"               PAY     ●──────────▶          │    10.00A              "
"                                                                      "
"                                                                      "
"                                                                      "
"                                                                      "
