src/widgets/graph/snapshots/lazylora__widgets__graph__txn_graph__tests__real_mainnet_app_call_inner_txns.snap
---
source: src/widgets/graph/txn_graph.rs
expression: terminal.backend()
---
"TYP       AAC...4A   App #12…   GEA...TU   2PI...MM   App #10…   FCH...SM   EOX...E4   IWT...VY   Ap"
"──────────────┬──────────┬──────────┬──────────┬──────────┬──────────┬──────────┬──────────┬────────"
"              │          │          │          │          │          │          │          │        "
"  APP         ●──────────▶          │          │          │          │          │          │        "
" ·PAY         ●───────2.77A────────────────────▶          │          │          │          │        "
" ·APP         ●───────────────────NoOp────────────────────▶          │          │          │        "
"··AXF         ◀───────586582───────────────────●          │          │          │          │        "
" ·AXF         ●──────────────────586582──────────────────────────────▶          │          │        "
" ·APP         ●───────────────────NoOp────────────────────▶          │          │          │        "
"··AXF         ◀───────────────────1465───────────────────────────────●          │          │        "
" ·AXF         ●──────────────────────────────1465───────────────────────────────▶          │        "
" ·APP         ●───────────────────NoOp────────────────────▶          │          │          │        "
"··AXF         ◀─────────────────────────────17647───────────────────────────────●          │        "
" ·AXF         ●─────────────────────────────17647──────────────────────────────────────────▶        "
" ·APP         ●─────────────────────────────────────────NoOp────────────────────────────────────────"
"··PAY         ◀─────────────────────────────2.79A──────────────────────────────────────────●        "
" ·PAY        ↺0A         │          │          │          │          │          │          │        "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
