src/widgets/graph/snapshots/lazylora__widgets__graph__txn_graph__tests__real_mainnet_app_call_mixed_inner.snap
---
source: src/widgets/graph/txn_graph.rs
expression: terminal.backend()
---
"                TYP       2QN...LM   App #30…   PEG...GE   App #33…   42J...OU                      "
"                ──────────────┬──────────┬──────────┬──────────┬──────────┬───                      "
"                              │          │          │          │          │                         "
"                  APP         ●──────────▶          │          │          │    NoOp                 "
"                 ·APP         │          │          ●──────────▶          │    NoOp                 "
"                 ·PAY         │          │          ●──────0.4030A────────▶                         "
"                 ·APP         │          │          ●──────────▶          │    NoOp                 "
"                ··AXF         │          │          │          │       ↺opt-i…                      "
"                ··AXF         │          │          │          │       ↺opt-i…                      "
"                ··AXF         │          │          │          │       ↺opt-i…                      "
"                 ·AXF         │          │          ●──────26727249───────▶                         "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
