src/widgets/graph/snapshots/lazylora__widgets__graph__txn_graph__tests__real_mainnet_asset_close_to.snap
---
source: src/widgets/graph/txn_graph.rs
expression: terminal.backend()
---
"                                          ①                                     "
"                                 TYP   353...FI                                 "
"                                       Account                                  "
"                                 ──────────┬───                                 "
"                                           │                                    "
"                                   AXF  ↺opt-i…                                 "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
