src/widgets/graph/snapshots/lazylora__widgets__graph__txn_graph__tests__real_mainnet_asset_config_reconfigure.snap
---
source: src/widgets/graph/txn_graph.rs
expression: terminal.backend()
---
"                                ①                           "
"                       TYP   CHA...YA                       "
"                             Account                        "
"                       ──────────┬───                       "
"                                 │                          "
"                         ACF  ◉config                       "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
